force-app/main/default/objects/Pricing_Matrix__c/Pricing_Matrix__c.object-meta.xml
<CustomObject>
    <description
  >Used as a decision table for deriving pricing based on Type, Subtype, Region, etc.</description>
    <label>Pricing Matrix</label>
    <nameField>
        <label>Pricing Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>