force-app/main/default/objects/Pricing_Matrix__c/fields/AdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentType__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
                <default>true</default>
                <label>Override</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>