force-app/main/default/objects/Pricing_Matrix__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Effective Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>