force-app/main/default/objects/Pricing_Matrix__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>