force-app/main/default/objects/Pricing_Matrix__c/fields/External_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Import_Id__c</fullName>
    <description>Fíonta field for use in data migration/environment management</description>
    <externalId>true</externalId>
    <inlineHelpText>Fíonta field for use in data migration/environment management</inlineHelpText>
    <label>External Import Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>