force-app/main/default/objects/Pricing_Matrix__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description
  >Minimum net unit price after all promo adjustments for this matrix entry. Blank = no floor (effective floor of 0). Sourced from this record into OrderItem.Floor_Price__c by the Price Matrix pricing element; the Apply Promotion Value formula uses it as the lower bound (MAX(Floor_Price__c, NetUnitPrice - Promotion_Value__c)) instead of clamping to 0. Units match SalesPrice__c (currency interpreted via the matrix record&apos;s CurrencyIsoCode).</description>
    <inlineHelpText
  >Optional. Minimum net unit price after promo discounts. Leave blank for no floor.</inlineHelpText>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>