force-app/main/default/objects/Pricing_Matrix__c/fields/Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Pricing Matrices</relationshipLabel>
    <relationshipName>Pricing_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>