force-app/main/default/objects/Pricing_Matrix__c/fields/PriceMatrixExternalId__c.field-meta.xml
<CustomField>
    <fullName>PriceMatrixExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Price Matrix External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>