force-app/main/default/objects/Pricing_Matrix__c/fields/Primary_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Type__c</fullName>
    <label>Primary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>Direct (Enterprise)</fullName>
            </value>
            <value>
                <fullName>Allied (Enterprise)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>