force-app/main/default/objects/Pricing_Matrix__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Matrices</relationshipLabel>
    <relationshipName>Pricing_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>