force-app/main/default/objects/Pricing_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Product2Id__c</columns>
    <columns>Subtype__c</columns>
    <columns>SalesPrice__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>IsActive__c</columns>
    <columns>AdjustmentType__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>